2004-02-09  Manish Singh  <yosh@gimp.org>
        * app/file/Makefile.am
        * app/paint/Makefile.am
        * app/text/Makefile.am
        * app/xcf/Makefile.am: changed GTK_CFLAGS to GDK_PIXBUF_CFLAGS, since
        we don't use any gtk/gdk functions here. This especially helps in the
        text directory, since it avoids problems on broken setups with old
        fontconfig stuff in the X11 directory lying around.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12318 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/text/Makefile.am
+++ b/app/text/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS = \
 INCLUDES = \
 	-I$(top_srcdir)		\
 	-I$(top_srcdir)/app	\
-	$(GTK_CFLAGS)		\
+	$(GDK_PIXBUF_CFLAGS)	\
 	$(PANGOFT2_CFLAGS)	\
 	-I$(includedir)
 
