--- a/app/file/Makefile.am
+++ b/app/file/Makefile.am
@@ -18,7 +18,7 @@ AM_CPPFLAGS = \
 INCLUDES = \
 	-I$(top_srcdir)		\
 	-I$(top_srcdir)/app	\
-	$(GTK_CFLAGS)		\
+	$(GDK_PIXBUF_CFLAGS)	\
 	-I$(includedir)
 
 EXTRA_DIST = makefile.msc
