--- a/app/xcf/Makefile.am
+++ b/app/xcf/Makefile.am
@@ -25,7 +25,7 @@ AM_CPPFLAGS = \
 INCLUDES = \
 	-I$(top_srcdir)		\
 	-I$(top_srcdir)/app	\
-	$(GTK_CFLAGS)		\
+	$(GDK_PIXBUF_CFLAGS)	\
 	-I$(includedir)
 
 EXTRA_DIST = makefile.msc
