--- a/data/misc/gimp.desktop.in.in
+++ b/data/misc/gimp.desktop.in.in
@@ -4,7 +4,7 @@ _Name=The GIMP
 _Comment=Create and edit images or photographs
 Exec=gimp-remote-@GIMP_APP_VERSION@ %U
 TryExec=gimp-@GIMP_APP_VERSION@
-Icon=@gimpdatadir@/images/wilber-icon.png
+Icon=@gimpdatadir@/images/@GIMP_DESKTOP_ICON@
 Terminal=false
 Type=Application
 Categories=Application;Graphics;RasterGraphics;
