2004-02-10  Sven Neumann  <sven@gimp.org>
	* themes/Default/images/Makefile.am (CORE_IMAGES): use the
	question stock icon instead of the warning one.

	* app/core/gimpviewable.c (gimp_viewable_get_dummy_preview):
	return a question icon as dummy preview.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12338 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/themes/Default/images/Makefile.am
+++ b/themes/Default/images/Makefile.am
@@ -8,10 +8,10 @@ themedatadir = $(gimpdatadir)/themes/Default/images
 ## A warning Wilber that is used from the core
 
 CORE_IMAGES = \
-	stock-warning-64.png
+	stock-question-64.png
 
 CORE_VARIABLES = \
-	stock_warning_64 $(srcdir)/stock-warning-64.png
+	stock_question_64 $(srcdir)/stock-question-64.png
 
 
 ## Wilber icons for the window managaer, compiled in
