2004-02-11  Sven Neumann  <sven@gimp.org>
	* configure.in (GIMP_DESKTOP_ICON): fixed icon names.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12349 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -110,9 +110,9 @@ fi
 
 dnl Choose a desktop icon
 if test "x$GIMP_UNSTABLE" = "xyes"; then
-  GIMP_DESKTOP_ICON="gimp-devel-icon.png"
+  GIMP_DESKTOP_ICON="wilber-devel-icon.png"
 else
-  GIMP_DESKTOP_ICON="gimp-icon.png"
+  GIMP_DESKTOP_ICON="wilber-icon.png"
 fi
 
 AC_SUBST(GIMP_DESKTOP_ICON)
