2004-02-19  Michael Natterer  <mitch@gimp.org>
	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-display-filter-16.png
	* themes/Default/images/stock-display-filter-24.png
	* libgimpwidgets/gimpstock.[ch]: added Jimmac's glasses.

	* app/display/gimpdisplayshell-filter-dialog.c
	* app/gui/image-menu.c: and use them.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12405 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/themes/Default/images/Makefile.am
+++ b/themes/Default/images/Makefile.am
@@ -49,6 +49,7 @@ STOCK_MENU_IMAGES = \
 	stock-convert-rgb-16.png			\
 	stock-default-colors-12.png			\
 	stock-device-status-16.png			\
+	stock-display-filter-16.png			\
 	stock-eye-12.png				\
 	stock-flip-horizontal-16.png			\
 	stock-flip-vertical-16.png			\
@@ -136,6 +137,7 @@ STOCK_BUTTON_IMAGES = \
 	stock-curve-free-16.png			\
 	stock-curve-smooth-16.png		\
 	stock-device-status-24.png		\
+	stock-display-filter-24.png		\
 	stock-duplicate-16.png			\
 	stock-edit-16.png			\
 	stock-eye-20.png			\
