2004-02-22  Sven Neumann  <sven@gimp.org>
	Let all GimpImageMap tools remember the state of the preview toggle
	(bug #135059):

	* app/tools/Makefile.am
	* app/tools/gimpimagemapoptions.[ch]
	* app/tools/tools-types.h: added new GimpToolOptions class to hold
	the preview setting.

	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcolorizetool.c
	* app/tools/gimpcoloroptions.[ch]
	* app/tools/gimphuesaturationtool.c
	* app/tools/gimpimagemaptool.[ch]
	* app/tools/gimpposterizetool.c
	* app/tools/tools-types.h: use the new class.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12424 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/tools/Makefile.am
+++ b/app/tools/Makefile.am
@@ -68,6 +68,8 @@ libapptools_a_sources = \
 	gimphistogramoptions.h		\
 	gimphuesaturationtool.c		\
 	gimphuesaturationtool.h		\
+	gimpimagemapoptions.c		\
+	gimpimagemapoptions.h		\
 	gimpimagemaptool.c		\
 	gimpimagemaptool.h		\
 	gimpinkoptions.c		\
