--- a/configure.in
+++ b/configure.in
@@ -37,6 +37,8 @@ m4_define([gimp_user_version], [1.3])
 
 m4_define([gimp_unstable],
           m4_if(m4_eval(gimp_minor_version % 2), [1], [yes], [no]))
+m4_define([gimp_stable],
+          m4_if(m4_eval(gimp_minor_version % 2), [0], [yes], [no]))
 
 m4_define([gimp_full_name], [The GIMP])
 
@@ -1359,7 +1361,7 @@ AM_CONDITIONAL(ENABLE_GTK_DOC, test x$enable_gtk_doc = xyes)
 # Allow to configure the gimp environment
 #########################################
 
-AC_ARG_ENABLE(default-binary, [  --enable-default-binary install this as the default gimp binary (default=no)], , enable_default_binary=no)
+AC_ARG_ENABLE(default-binary, [  --enable-default-binary install this as the default gimp binary (default=gimp_stable)], , enable_default_binary=gimp_stable)
 
 AM_CONDITIONAL(DEFAULT_BINARY, test x$enable_default_binary = xyes)
 
