2004-03-03  Michael Natterer  <mitch@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimppreviewrendererimagefile.[ch]: added new preview
	renderer class (has some disabled code from my GtkFileChooser tree
	and behaves exactly as the default implementation).

	* app/widgets/gimppreviewrenderer-utils.c: use it for GimpImagefiles.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12497 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -152,6 +152,8 @@ libappwidgets_a_sources = \
 	gimppreviewrenderergradient.h	\
 	gimppreviewrendererimage.c	\
 	gimppreviewrendererimage.h	\
+	gimppreviewrendererimagefile.c	\
+	gimppreviewrendererimagefile.h	\
 	gimppreviewrendererlayer.c	\
 	gimppreviewrendererlayer.h	\
 	gimppreviewrenderervectors.c	\
