2004-03-04  Sven Neumann  <sven@gimp.org>
	* Makefile.am: added a missing dependency that caused the
	gimp20-tips.pot not to be rebuild when gimp-tips.xml.in changes.

	* update.sh: s/gimp14/gimp20/


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12516 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/Makefile.am
+++ b/tips/Makefile.am
@@ -41,9 +41,7 @@ EXTRA_DIST = \
 	gimp-tips.dtd			\
 	update.sh
 
-CLEANFILES = $(GETTEXT_PACKAGE)-tips.po
-
-MAINTAINERCLEANFILES = $(tipsdata_DATA)
+MAINTAINERCLEANFILES = $(GETTEXT_PACKAGE)-tips.pot $(tipsdata_DATA)
 
 
 %.xml: %.xml.in $(srcdir)/$(GETTEXT_PACKAGE)-tips.pot  $(wildcard $(srcdir)/*.po)
@@ -53,7 +51,25 @@ GENPOT = INTLTOOL_EXTRACT=$(INTLTOOL_EXTRACT) $(INTLTOOL_UPDATE) --gettext-packa
 
 MSGMERGE = INTLTOOL_EXTRACT=$(INTLTOOL_EXTRACT) $(INTLTOOL_UPDATE) --gettext-package $(GETTEXT_PACKAGE)-tips --dist
 
-$(srcdir)/$(GETTEXT_PACKAGE)-tips.pot: POTFILES.in
+# POTFILES is created from POTFILES.in by stripping comments, empty lines
+# and Intltool tags (enclosed in square brackets), and appending a full
+# relative path to them
+POTFILES: POTFILES.in
+	( if test 'x$(srcdir)' != 'x.'; then \
+	    posrcprefix='$(top_srcdir)/'; \
+	  else \
+	    posrcprefix="../"; \
+	  fi; \
+	  rm -f $@-t $@ \
+	    && (sed -e '/^#/d' 						\
+		    -e "s/^\[.*\] +//" 					\
+		    -e '/^[ 	]*$$/d' 				\
+		    -e "s@.*@	$$posrcprefix& \\\\@" < $(srcdir)/$@.in	\
+		| sed -e '$$s/\\$$//') > $@-t \
+	    && chmod a-w $@-t \
+	    && mv $@-t $@ )
+
+$(srcdir)/$(GETTEXT_PACKAGE)-tips.pot: $(POTFILES)
 	$(GENPOT)
 
 update-po: $(srcdir)/$(GETTEXT_PACKAGE)-tips.pot
