--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -232,6 +232,7 @@ plug-ins/imagemap/imap_source.c
 plug-ins/imagemap/imap_stock.c
 plug-ins/imagemap/imap_toolbar.c
 plug-ins/imagemap/imap_tools.c
+plug-ins/libgimpoldpreview/gimpoldpreview.c
 plug-ins/maze/algorithms.c
 plug-ins/maze/maze.c
 plug-ins/maze/maze_face.c
