2004-03-07  Sven Neumann  <sven@gimp.org>
	* tools/Makefile.am (AM_CPPFLAGS): define GIMP_APP_VERSION

	* tools/gimp-remote.c: when starting a new gimp, make sure the
	desktop-startup-id gets passed to it. Makes startup notification
	work correctly again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12543 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -28,6 +28,8 @@ gimp_remote_1_3_LDADD = \
 
 kernelgen_SOURCES = kernelgen.c
 
+AM_CPPFLAGS = -DGIMP_APP_VERSION=\"@GIMP_APP_VERSION@\"
+
 INCLUDES = \
 	-I$(top_srcdir)	\
 	$(GTK_CFLAGS)	\
