2004-03-07  Sven Neumann  <sven@gimp.org>
	* gimp.spec.in: removed references to static libraries. These
	are not any longer built by default.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12548 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/gimp.spec.in
+++ b/gimp.spec.in
@@ -229,9 +229,6 @@ cat gimp-plugin-files gimp-tips-files > gimp.files
 
 %{prefix}/share/aclocal/gimp-2.0.m4
 
-%{prefix}/lib/*.a
-%{prefix}/lib/gimp/%{subver}/modules/*.a
-
 %{prefix}/include/gimp-%{subver}/libgimp
 
 %files docs
@@ -244,6 +241,9 @@ cat gimp-plugin-files gimp-tips-files > gimp.files
 %{prefix}/share/gtk-doc/html/libgimpwidgets
 
 %changelog
+* Sun Mar  7 2004 Sven Neumann <sven@gimp.org>
+- Removed references to static libraries
+
 * Sat Jan 10 2004 Ville Pätsi <drc@gimp.org>
 - Changed epoch to 2
 
