2004-03-07  Hans Breuer  <hans@breuer.org>
	* themes/Default/images/makefile.msc
	  app/*/makefile.msc plug-ins/makefile.msc : updated


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12551 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/tools/makefile.msc
+++ b/app/tools/makefile.msc
@@ -57,6 +57,7 @@ OBJECTS = \
 	gimphistogramoptions.obj \
 #	gimphistogramtool.obj \
 	gimphuesaturationtool.obj \
+	gimpimagemapoptions.obj \
 	gimpimagemaptool.obj \
 	gimpinkoptions.obj \
 	gimpinktool.obj \
