--- a/app/gui/makefile.msc
+++ b/app/gui/makefile.msc
@@ -121,6 +121,7 @@ INCLUDES = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/app \
 	$(GTK2_CFLAGS) \
+	$(FONTCONFIG_CFLAGS) \
 	-I$(includedir)
 
 DEFINES = \
