--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -180,8 +180,8 @@ plug-ins/gimpressionist/preview.c
 plug-ins/gimpressionist/repaint.c
 plug-ins/gimpressionist/size.c
 plug-ins/gimpressionist/sizemap.c
+plug-ins/help/domain.c
 plug-ins/helpbrowser/dialog.c
-plug-ins/helpbrowser/domain.c
 plug-ins/helpbrowser/helpbrowser.c
 plug-ins/ifscompose/ifscompose.c
 plug-ins/imagemap/imap_about.c
