2004-03-10  Sven Neumann  <sven@gimp.org>
	* plug-ins/imagemap/imap_object_popup.c: marked missing strings
	for localization (bug #136713).

	* plug-ins/imagemap/imap_stock.c (imap_stock_items): fixed bogus
	translation domain for stock item (bug #136713).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12586 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -222,6 +222,7 @@ plug-ins/imagemap/imap_file.c
 plug-ins/imagemap/imap_grid.c
 plug-ins/imagemap/imap_main.c
 plug-ins/imagemap/imap_menu.c
+plug-ins/imagemap/imap_object_popup.c
 plug-ins/imagemap/imap_polygon.c
 plug-ins/imagemap/imap_popup.c
 plug-ins/imagemap/imap_preferences.c
