2004-03-10  Manish Singh  <yosh@gimp.org>
        * data/misc/gimp.applications.in: GIMP_VISIBLE_NAME doesn't exist
        anymore. Just use "The GIMP".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12599 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/data/misc/gimp.applications.in
+++ b/data/misc/gimp.applications.in
@@ -1,6 +1,6 @@
 gimp-@GIMP_APP_VERSION@
 	command=gimp-remote-@GIMP_APP_VERSION@
-	name=@GIMP_VISIBLE_NAME@
+	name=The GIMP
 	can_open_multiple_files=true
 	expects_uris=non-file
 	requires_terminal=false
