2004-03-12  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added missing app/widgets/gimpthumbbox.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12620 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -292,6 +292,7 @@ app/widgets/gimpstrokeeditor.c
 app/widgets/gimptemplateeditor.c
 app/widgets/gimptemplateview.c
 app/widgets/gimptexteditor.c
+app/widgets/gimpthumbbox.c
 app/widgets/gimptoolbox-color-area.c
 app/widgets/gimptoolbox-indicator-area.c
 app/widgets/gimptoolbox.c
