2004-03-12  Sven Neumann  <sven@gimp.org>
	* POTFILES.in: added missing libgimpwidgets/gimppatheditor.c.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12621 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/POTFILES.in
+++ b/po-libgimp/POTFILES.in
@@ -22,6 +22,7 @@ libgimpwidgets/gimpcolorselect.c
 libgimpwidgets/gimpcolorselection.c
 libgimpwidgets/gimpfileentry.c
 libgimpwidgets/gimpmemsizeentry.c
+libgimpwidgets/gimppatheditor.c
 libgimpwidgets/gimppickbutton.c
 libgimpwidgets/gimpquerybox.c
 libgimpwidgets/gimpstock.c
