--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -264,6 +264,7 @@ app/widgets/gimpcoloreditor.c
 app/widgets/gimpcolorframe.c
 app/widgets/gimpcolormapeditor.c
 app/widgets/gimpcontainergridview.c
+app/widgets/gimpcontainermenuimpl.c
 app/widgets/gimpcontainerpopup.c
 app/widgets/gimpdataeditor.c
 app/widgets/gimpdatafactoryview.c
