2004-03-15  Sven Neumann  <sven@gimp.org>
	* data/images/gimp_splash.png: splash image for GIMP 2.0 by Jimmac.

	* app/gui/splash.[ch]: draw the text on the splash image, not
	below it.

	* app/app_procs.[ch]
	* app/gui/gui.[ch]
	* app/main.c
	* docs/gimp.1.in: dropped support for the --no-splash-image
	command-line option (not to be confused with --no-splash). It was
	never very useful and makes even less sense in times where startup
	notification is available.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12661 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimp.1.in
+++ b/docs/gimp.1.in
@@ -6,9 +6,9 @@ gimp - an image manipulation and paint program.
 [\-h] [\-\-help] [-v] [\-\-version] [\-\-verbose] [\-\-no\-shm]
 [\-\-no\-cpu\-accel] [\-\-display \fIdisplay\fP] [\-d] [\-\-no\-data]
 [\-f] [\-\-no\-fonts] [\-i] [\-\-no\-interface] [\-s] [\-\-no\-splash]
-[\-S] [\-\-no\-splash\-image] [\-\-session \fI<name>\fP]
-[\-g] [\-\-gimprc \fI<gimprc>\fP] [\-\-system\-gimprc \fI<gimprc>\fP]
-[\-\-dump\-gimprc\fP] [\-\-console\-messages] [\-\-debug\-handlers]
+[\-\-session \fI<name>\fP] [\-g] [\-\-gimprc \fI<gimprc>\fP]
+[\-\-system\-gimprc \fI<gimprc>\fP] [\-\-dump\-gimprc\fP]
+[\-\-console\-messages] [\-\-debug\-handlers]
 [\-b] [\-\-batch \fI<commands>\fP]
 [\fIfilename\fP] ...
 
@@ -70,9 +70,6 @@ Use the designated X display.
 .TP 8
 .B \-s, \-\-no\-splash
 Do not show the splash screen.
-.TP 8
-.B \-S, \-\-no\-splash\-image
-Do not show the splash screen image as part of the splash screen.
 .TP 8
 .B \-\-session \fI<name>\fP
 Use a different sessionrc for this GIMP session. The given session
