2004-03-17  Simon Budig  <simon@gimp.org>
	* app/gui/plug-in-menus.c: Sort the plugin menu entries with
	the mnemonics stripped. Avoids weird ordering in the "C" and
	"POSIX" locales.

	* app/widgets/gimpitemtreeview.c: make a simple click on the
	"New" Button use defaults and use shift-click for the new-dialog
	invocation.

	Some more useless button cleanup:

	* app/widgets/gimpdatafactoryview.c: only create an Edit button
	when the edit_function is set.

	* app/core/gimp.c: don't set an edit func for the patterns.

	* app/gui/patterns-menu.c: Don't create the "New", "Edit" and
	"Duplicate" Menu entries for the patterns.

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimppatternfactoryview.[ch]: New widget:
	gimp_pattern_factory_view. Necessary to be able to hide the
	"duplicate" button...

	* app/gui/dialogs-constructors.c: Use it.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12697 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -136,6 +136,8 @@ libappwidgets_a_sources = \
 	gimpnavigationpreview.h		\
 	gimppaletteeditor.c		\
 	gimppaletteeditor.h		\
+	gimppatternfactoryview.c	\
+	gimppatternfactoryview.h	\
 	gimppreview.c			\
 	gimppreview.h			\
 	gimppreview-popup.c		\
