2004-03-20  Sven Neumann  <sven@gimp.org>
	* configure.in: set version number to 2.0.0, version string to
	"2.0rc1".

	* app/Makefile.am
	* libgimp/Makefile.am
	* libgimpbase/Makefile.am
	* libgimpcolor/Makefile.am
	* libgimpmath/Makefile.am
	* libgimpmodule/Makefile.am
	* libgimpthumb/Makefile.am
	* libgimpwidgets/Makefile.am
	* tools/Makefile.am: changed 1.3 to 2.0 all over the place.

	* README
	* NEWS: updated for the 2.0rc1 release.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12760 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -10,9 +10,9 @@ AC_PREREQ(2.54)
 # if backwards compatibility has been broken,
 # set GIMP_BINARY_AGE and GIMP_INTERFACE_AGE to 0.
 
-m4_define([gimp_major_version], [1])
-m4_define([gimp_minor_version], [3])
-m4_define([gimp_micro_version], [27])
+m4_define([gimp_major_version], [2])
+m4_define([gimp_minor_version], [0])
+m4_define([gimp_micro_version], [0])
 m4_define([gimp_real_version],
           [gimp_major_version.gimp_minor_version.gimp_micro_version])
 m4_define([gimp_version], [gimp_real_version])
@@ -20,20 +20,20 @@ m4_define([gimp_interface_age], [0])
 m4_define([gimp_binary_age], [0])
 
 # For overriding the version string. Comment out if not needed.
-m4_define([gimp_version], [2.0pre4])
+m4_define([gimp_version], [2.0rc1])
 
 # This is the X.Y used in -lgimp-X.Y
-m4_define([gimp_api_version], [1.3])
+m4_define([gimp_api_version], [2.0])
 
 # Versions used for apps, plugins, tools, pkg-config files, and data,
 # as well as global and user prefs
-m4_define([gimp_app_version], [1.3])
-m4_define([gimp_plugin_version], [1.3])
+m4_define([gimp_app_version], [2.0])
+m4_define([gimp_plugin_version], [2.0])
 m4_define([gimp_tool_version], [2.0])
 m4_define([gimp_pkgconfig_version], [2.0])
-m4_define([gimp_data_version], [1.3])
-m4_define([gimp_sysconf_version], [1.3])
-m4_define([gimp_user_version], [1.3])
+m4_define([gimp_data_version], [2.0])
+m4_define([gimp_sysconf_version], [2.0])
+m4_define([gimp_user_version], [2.0])
 
 m4_define([gimp_unstable],
           m4_if(m4_eval(gimp_minor_version % 2), [1], [yes], [no]))
