Added ChangeLog.pre-2-0 to EXTRA_DIST
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12820 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,7 @@ EXTRA_DIST = \
 	ChangeLog		\
 	ChangeLog.pre-1-0	\
 	ChangeLog.pre-1-2	\
+	ChangeLog.pre-2-0	\
 	HACKING			\
 	INSTALL			\
 	LICENSE			\
