--- a/plug-ins/help/Makefile.am
+++ b/plug-ins/help/Makefile.am
@@ -3,6 +3,12 @@
 libgimp = $(top_builddir)/libgimp/libgimp-$(GIMP_API_VERSION).la
 libgimpbase = $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la
 
+if OS_WIN32
+mwindows = -mwindows
+endif
+
+AM_LDFLAGS = $(mwindows)
+
 libexecdir = $(gimpplugindir)/plug-ins
 
 libexec_PROGRAMS = help
