--- a/docs/gimprc.5.in
+++ b/docs/gimprc.5.in
@@ -672,9 +672,10 @@ When enabled, pressing F1 will open the help browser.  Possible values are yes
 and no.
 
 .TP
+(help-locales "")
 
-Specifies the language preferences used by the help system. This is
-acolon-separated list of language identifiers with decreasing priority. If
+Specifies the language preferences used by the help system. This is a
+colon-separated list of language identifiers with decreasing priority. If
 empty, the language is taken from the user's locale setting.  This is a string
 value.
 
