2004-04-03  Manish Singh  <yosh@gimp.org>
        * gimptool-2.0.in: Create any directories in the install path that do
        not already exist. Fixes bug #138980.

        * docs/gimptool.1.in: s/dont/don't/g


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12878 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimptool.1.in
+++ b/docs/gimptool.1.in
@@ -50,17 +50,17 @@ Run quietly without echoing any of the build commands.
 Run silently without echoing any of the build commands. Same as \-\-quiet.
 .TP 8
 .B \-n
-Test mode. Print the commands but dont actually execute them. Useful for
+Test mode. Print the commands but don't actually execute them. Useful for
 making dry runs for testing.
 .TP 8
 .B \-\-just-print
-Test mode. Print the commands but dont actually execute them. Same as \-n.
+Test mode. Print the commands but don't actually execute them. Same as \-n.
 .TP 8
 .B \-\-dry-run
-Test mode. Print the commands but dont actually execute them. Same as \-n.
+Test mode. Print the commands but don't actually execute them. Same as \-n.
 .TP 8
 .B \-\-recon
-Test mode. Print the commands but dont actually execute them. Same as \-n.
+Test mode. Print the commands but don't actually execute them. Same as \-n.
 .TP 8
 .B \-\-bindir
 Outputs the bindir used to install the \fIGIMP\fP.
