2004-04-10  Sven Neumann  <sven@gimp.org>
	* docs/gimp-remote.1.in: updated example URL.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12915 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimp-remote.1.in
+++ b/docs/gimp-remote.1.in
@@ -44,7 +44,7 @@ a GIMP toolbox window has been found on this display.
 
 .SH EXAMPLES
 .TP
-.BI gimp-remote\ http://www.gimp.org/icons/frontpage-small.gif
+.BI gimp-remote\ http://www.gimp.org/images/wilber_the_gimp.png
 Loads the image from the GIMP website into a running GIMP or starts
 a new one.
 .TP
