2004-04-11  Hans Breuer  <hans@breuer.org>
	* app/makefile.msc : build sanity.obj
	  app/text/makefile.msc : gimptextundo.obj
	  app/widgets/makefile.msc : gimppatternfactoryview.obj

	* plug-ins/common/winclipboard.c : don't call
	gimp_image_undo_enable() when it's not switched off.
	Otherwise the undo history would be destroyed with
	Gimp-Core-CRITICAL **: file gimpimage.c: line 1579: assertion
	`gimage->undo_freeze_count > 0' failed


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12921 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/text/makefile.msc
+++ b/app/text/makefile.msc
@@ -36,6 +36,7 @@ OBJECTS = \
 	gimptextlayer-xcf.obj \
 	gimptextlayout.obj \
 	gimptextlayout-render.obj \
+	gimptextundo.obj \
 	text-enums.obj \
 
 INCLUDES = \
