2004-04-12  Sven Neumann  <sven@gimp.org>
	* libgimpmath/Makefile.am: remove test-md5 on make clean.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12923 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimpmath/Makefile.am
+++ b/libgimpmath/Makefile.am
@@ -103,6 +103,10 @@ test_md5_LDADD = \
 	$(GLIB_LIBS) 		\
 	$(test_md5_DEPENDENCIES)
 
+
+CLEANFILES = $(EXTRA_PROGRAMS)
+
+
 install-data-local: install-ms-lib install-libtool-import-lib
 
 uninstall-local: uninstall-ms-lib uninstall-libtool-import-lib
