--- a/configure.in
+++ b/configure.in
@@ -820,21 +820,15 @@ if test "$gdk_target" = x11; then
     if test -z "$LIBXMU"; then
       gimp_save_CFLAGS="$CFLAGS"
       gimp_save_LDFLAGS="$LDFLAGS"
-      CFLAGS="$CFLAGS $X_CFLAGS"
+      CFLAGS="$CFLAGS $GTK_CFLAGS"
       LDFLAGS="$LDFLAGS $X_LIBS"
       AC_CHECK_LIB(Xmu, XmuClientWindow,
-        [AC_CHECK_HEADER(X11/Xmu/WinUtil.h,
+        [AC_CHECK_HEADERS(X11/Xmu/WinUtil.h,
           GIMP_REMOTE='gimp-remote-gimp_app_version';
 	  have_libxmu=yes
           LIBXMU="$X_LIBS $X_PRE_LIBS -lX11 -lXmu -lXt",
-	  [AC_MSG_WARN(*** gimp-remote will not be built (XMU header file not found) ***)])],
-	  [AC_CHECK_LIB(Xmu, XmuUpdateMapHints,
-	    [AC_CHECK_HEADER(X11/Xmu/WinUtil.h,
-              GIMP_REMOTE='gimp-remote-gimp_app_version';
-	      have_libxmu=yes
-	      LIBXMU="$X_LIBS $X_PRE_LIBS -lX11 -lXmu -lXt",
-	      [AC_MSG_WARN(*** gimp-remote will not be built (XMU header file not found) ***)])],
-	  AC_MSG_WARN(*** gimp-remote will not be built (XMU library not found) ***), -lXt)], -lXt)
+	  [AC_MSG_WARN(*** gimp-remote will not be built (XMU header file not found) ***)],[#include <gdk/gdkx.h>])],
+	[AC_MSG_WARN(*** gimp-remote will not be built (XMU library not found) ***)], -lXt)
       CFLAGS="$gimp_save_CFLAGS"
       LDFLAGS="$gimp_save_LDFLAGS"
     fi
