--- a/configure.in
+++ b/configure.in
@@ -11,13 +11,13 @@ AC_PREREQ(2.54)
 # set GIMP_BINARY_AGE and GIMP_INTERFACE_AGE to 0.
 
 m4_define([gimp_major_version], [2])
-m4_define([gimp_minor_version], [0])
-m4_define([gimp_micro_version], [1])
+m4_define([gimp_minor_version], [1])
+m4_define([gimp_micro_version], [0])
 m4_define([gimp_real_version],
           [gimp_major_version.gimp_minor_version.gimp_micro_version])
 m4_define([gimp_version], [gimp_real_version])
-m4_define([gimp_interface_age], [1])
-m4_define([gimp_binary_age], [1])
+m4_define([gimp_interface_age], [0])
+m4_define([gimp_binary_age], [0])
 
 # For overriding the version string. Comment out if not needed.
 # m4_define([gimp_version], [2.0])
@@ -121,13 +121,7 @@ AC_SUBST(GIMP_DESKTOP_ICON)
 
 
 # libtool versioning
-#LT_RELEASE=$GIMP_MAJOR_VERSION.$GIMP_MINOR_VERSION
-#LT_CURRENT=`expr $GIMP_MICRO_VERSION - $GIMP_INTERFACE_AGE`
-#LT_REVISION=$GIMP_INTERFACE_AGE
-#LT_AGE=`expr $GIMP_BINARY_AGE - $GIMP_INTERFACE_AGE`
-#LT_CURRENT_MINUS_AGE=`expr $LT_CURRENT - $LT_AGE`
-
-m4_define([lt_current], [m4_eval(gimp_micro_version - gimp_interface_age)])
+m4_define([lt_current], [m4_eval(100 * gimp_minor_version + gimp_micro_version - gimp_interface_age)])
 m4_define([lt_revision], [gimp_interface_age])
 m4_define([lt_age], [m4_eval(gimp_binary_age - gimp_interface_age)])
 LT_CURRENT=lt_current
