2004-04-15  Sven Neumann  <sven@gimp.org>
	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/winicon/Makefile.am
	* plug-ins/winicon/icodialog.[ch]
	* plug-ins/winicon/icoload.[ch]
	* plug-ins/winicon/icosave.[ch]
	* plug-ins/winicon/main.[ch]: added plug-in to load and save
	Windows icon files. Plug-in written by Christian Kreibich, port to
	GIMP-2.0 API by Gregor Riepl, massive code cleanup by me. Fixes
	bug #139160.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12967 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1551,6 +1551,7 @@ plug-ins/rcm/Makefile
 plug-ins/sel2path/Makefile
 plug-ins/sgi/Makefile
 plug-ins/twain/Makefile
+plug-ins/winicon/Makefile
 plug-ins/winsnap/Makefile
 modules/Makefile
 devel-docs/Makefile
